# cap-countdown

./: .last_build_id  README.md  flutter_service_worker.js  index.html  main.dart.js  manifest.json  pubspec.yaml  version.json
.github/workflows/: build.yml  compress_images.yml  deploy_web.yml
android/app/: build.gradle
assets/: AssetManifest.json  AssetManifest.smcbin  FontManifest.json  NOTICES  cap_exams.json  config.json  exams.json  minify_cpa_exam_data.py
assets/animations/: animation_review.lottie
assets/assets/: cap_exams.json  config.json  exams.json
canvaskit/: skwasm.wasm
canvaskit/chromium/: canvaskit.wasm
ios/Runner/: Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/ci_scripts/: ci_post_clone.sh  ci_post_install.sh
lib/: main.dart
lib/config/: app_theme.dart  config_helper.dart  config_instance.dart
lib/exam/: exam.dart  exam.g.dart  exam_loader.dart  exam_subject.dart  exam_subject.g.dart  question_choice.dart  question_choice.g.dart  subject_question.dart  subject_question.g.dart
lib/pages/: countdown_page.dart  exam.dart  exam_page.dart  home_page.dart  main_page.dart  settings_page.dart
lib/widgets/: answer_button.dart  cap_time_left.dart  choice_button.dart  (+2 more)
linux/: CMakeLists.txt  my_application.cc
readme/: image_material.md
script/: .gitignore  config.py  main.py  pyproject.toml
script/models/: cap_subject.py  exam.py  exam_subject.py  explanation_file.py  file_type.py  group_choice_question.py  optional_question.py  single_choice_question.py  subject.py  subject_question.py
script/tools/: downloader.py  main.py  parser.py  pdf.py
test/: widget_test.dart
web/: 404.html  index.html  manifest.json  privacy.html
windows/: CMakeLists.txt
(+78 files in other folders)
