[tool.poetry]
name = "cap-countdown-script"
version = "0.1.0"
description = "A script tool to fetch and tidy up the data from the CAP website."
authors = ["SiongSng <rrt467778@gmail.com>"]
packages = [{include = "tools"}, {include = "models"}]
license = "GPL-3.0-only"
repository="https://github.com/SiongSng/cap-countdown"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
